Fixed link error

--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Shikanichiwaru - Home</title>
+<link rel="shortcut icon" href="icon.png">
 <style type="text/css">
-<!--
-.style6 {font-family: Geneva, Arial, Helvetica, sans-serif}
-.style10 {font-size: 96px}
-.style12 {font-size: 24px}
--->
+.style6 {font-family: Geneva, Arial, Helvetica, sans-serif;}
+.style10 {font-size: 96px;}
+.style12 {font-size: 24px;}
 </style></head>
 
 <body>
@@ -28,14 +27,14 @@
         <li><strong>Blogs</strong></li>
       </ul></td>
       <td width="939"><p data-start="191" data-end="403">Hey there, you stumbled upon my little corner of the internet! Welcome to <em data-start="265" data-end="281">Shikanichiwaru</em>, aka <em data-start="287" data-end="297">Shikaawa</em>, your friendly developer and furry artist!</p>
-        <h3 data-start="405" data-end="431"><strong data-start="409" data-end="431">A Little About Me:</strong></h3>
-        <p data-start="432" data-end="747">I’m a small developer by day, and a furry artist by night (but it can also be the other way around). I like to combine my love for computers and art into something fun and occasionally weird. I hope to work on more projects so that I can actually showcase something but in the meantime, here's all I had to show!</p>
+        <h3 data-start="405" data-end="431"><strong data-start="409" data-end="431">About Me:</strong></h3>
+        <p data-start="432" data-end="747">I'm a small developer by day, and a furry artist by night (but it can also be the other way around). I like to combine my love for computers and art into something fun and occasionally weird. I hope to work on more projects so that I can actually showcase something but in the meantime, here's all I had to show!</p>
         <h3 data-start="749" data-end="773"><strong data-start="753" data-end="771">Socials</strong></h3>
-        <p data-start="774" data-end="864">Feel free to reach out (I don't bite!.. much) I might not be active on these, but here’s where you can catch me!</p>
+        <p data-start="774" data-end="864">Feel free to reach out (I don't bite!.. much) I might not be active on these, but here's where you can catch me!</p>
         <ul>
           <li><strong>Bluesky</strong>: <a href="https://bsky.app/profile/shikaawa.bsky.social" title="Shikaawa" target="_blank">@shikaawa</a></li>
           <li><strong>DeviantArt</strong>: <a href="https://www.deviantart.com/shikaawa" target="_blank">Shikaawa</a></li>
-          <li><strong>FurAffinity: </strong><a href="https://bsky.app/profile/shikaawa.bsky.social" target="_blank">Shikaawa</a></li>
+          <li><strong>FurAffinity: </strong><a href="https://furaffinity.net/user/shikaawa" target="_blank">Shikaawa</a></li>
         </ul>        
       <p data-start="1221" data-end="1337">Thanks for dropping by, I'd appreciate it if you'd follow along especially if you enjoy art, code, or just some random shenanigans!</p></td>
     </tr>
