--- a/index.html
+++ b/index.html
@@ -1,49 +1,114 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="en">
+
+<!-- What are you trying to inspect silly? -->
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Shikanichiwaru - Home</title>
-<link rel="shortcut icon" href="icon.png">
-<style type="text/css">
-.style6 {font-family: Geneva, Arial, Helvetica, sans-serif;}
-.style10 {font-size: 96px;}
-.style12 {font-size: 24px;}
-</style></head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Shikanichiwaru - Home</title>
+</head>
+<style>
+    body {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        margin: 0 20px;
+        padding: 0;
+        background-color: #f4f4f4;
+    }
+
+    .container {
+        max-width: 1200px;
+        margin: 20px auto;
+        padding: 20px;
+        background-color: #fff;
+        border-radius: 8px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    .header {
+        display: grid;
+        grid-template-columns: 120px 1fr;
+        margin-bottom: 20px;
+    }
+
+    .header img {
+        border-radius: 50%;
+    }
+
+    .icon, .banner {
+        width: 100%;
+    }
+
+    h1 {
+        font-size: 2rem;
+        margin-bottom: 5px;
+    }
+
+    p {
+        font-size: 1rem;
+        color: #666;
+    }
+
+    section {
+        margin-bottom: 20px;
+    }
+
+    h2 {
+        font-size: 1.5rem;
+        margin-bottom: 10px;
+    }
+
+    ul {
+        list-style-type: none;
+        padding: 0;
+    }
+
+    ul li {
+        margin-bottom: 4px;
+    }
+
+    @media (max-width: 768px) {
+        .header {
+            grid-template-columns: 1fr;
+            text-align: center;
+        }
+
+        .icon {
+            max-width: 100px;
+        }
+
+        h1 {
+            font-size: 1.5rem;
+        }
+    }
+</style>
 
 <body>
-<div align="center"><span class="style6"><img src="banner.png" alt="Shikaawa Banner" width="1118" height="181" /></span>
-  <table width="1124" border="0">
-    <tr>
-      <td width="135" class="style6"><img src="icon.png" alt="Shikaawa Icon" width="129" height="129" /></td>
-      <td width="973" class="style6"> <span class="style10">Shikaawa<br />
-      <span class="style12">A small furry developer and artist exploring around the internet!</span></span></td>
-    </tr>
-    </table>
-  <table width="1121" height="408" border="0">
-    <tr>
-      <td width="172" height="404" valign="top"><p>&nbsp;</p>
-        <ul><li><strong>Home</strong></li>
-        <li><strong>Socials</strong></li>
-        <li><strong>Blogs</strong></li>
-      </ul></td>
-      <td width="939"><p data-start="191" data-end="403">Hey there, you stumbled upon my little corner of the internet! Welcome to <em data-start="265" data-end="281">Shikanichiwaru</em>, aka <em data-start="287" data-end="297">Shikaawa</em>, your friendly developer and furry artist!</p>
-        <h3 data-start="405" data-end="431"><strong data-start="409" data-end="431">About Me:</strong></h3>
-        <p data-start="432" data-end="747">I'm a small developer by day, and a furry artist by night (but it can also be the other way around). I like to combine my love for computers and art into something fun and occasionally weird. I hope to work on more projects so that I can actually showcase something but in the meantime, here's all I had to show!</p>
-        <h3 data-start="749" data-end="773"><strong data-start="753" data-end="771">Socials</strong></h3>
-        <p data-start="774" data-end="864">Feel free to reach out (I don't bite!.. much) I might not be active on these, but here's where you can catch me!</p>
-        <ul>
-          <li><strong>Bluesky</strong>: <a href="https://bsky.app/profile/shikaawa.bsky.social" title="Shikaawa" target="_blank">@shikaawa</a></li>
-          <li><strong>DeviantArt</strong>: <a href="https://www.deviantart.com/shikaawa" target="_blank">Shikaawa</a></li>
-          <li><strong>FurAffinity: </strong><a href="https://furaffinity.net/user/shikaawa" target="_blank">Shikaawa</a></li>
-        </ul>        
-      <p data-start="1221" data-end="1337">Thanks for dropping by, I'd appreciate it if you'd follow along especially if you enjoy art, code, or just some random shenanigans!</p></td>
-    </tr>
-  </table>
-  <p>&nbsp;</p>
-</div>
-<h1 align="center" class="style6">&nbsp;</h1>
-<div align="center"></div>
-<ul>
-</ul>
+    <div class="container">
+        <img class="banner" src="banner.png" alt="Shikaawa Banner" />
+        <div class="header">
+            <img class="icon" src="icon.png" alt="Shikaawa Icon" />
+            <div class="title">
+                <h1>Shikaawa</h1>
+                <p>A small furry developer and artist exploring around the internet!</p>
+            </div>
+        </div>
+        <section class="about">
+            <h2>About Me:</h2>
+            <p>I'm a small developer by day, and a furry artist by night (but it can also be the other way around). I like to combine my love for computers and art into something fun and occasionally weird. I hope to work on more projects so that I can actually showcase something but in the meantime, here's all I had to show!</p>
+        </section>
+        <section class="socials">
+            <h2>Socials</h2>
+            <p>Feel free to reach out (I don't bite!.. much). Here are my socials:</p>
+            <ul>
+                <li><strong>Bluesky</strong>: <a href="https://bsky.app/profile/shikaawa.bsky.social"
+                        target="_blank">@shikaawa</a></li>
+                <li><strong>DeviantArt</strong>: <a href="https://www.deviantart.com/shikaawa"
+                        target="_blank">Shikaawa</a></li>
+                <li><strong>FurAffinity</strong>: <a href="https://furaffinity.net/user/shikaawa"
+                        target="_blank">Shikaawa</a></li>
+            </ul>
+        </section>
+    </div>
 </body>
+
 </html>
